--- a/fit_acquisition/lang/en.json
+++ b/fit_acquisition/lang/en.json
@@ -3,11 +3,8 @@
     "ACQUISITION_STOPPED" : "Acquisition stopped",
     "ACQUISITION_FINISHED" : "Acquisition finished",
     "NTP_ACQUISITION_TIME" : "NTP {} acquisition time: {}",
-    "PACKET_CAPTURE": "Packet Capture",
-    "SCREEN_RECORDER": "Screen Recoder",
     "NSLOOKUP": "Nslookup",
     "WHOIS": "Whois",
-    "HEADERS": "Html Headers",
     "TRACEROUTE": "Traceroute",
     "SSLKEYLOG": "SSL Keylog",
     "SSLCERTIFICATE": "SSL Certificate",
@@ -19,10 +16,26 @@
     "PEC_AND_DOWNLOAD_EML": "PEC and EML file",
     "PEC": "Send the PDF Report by PEC",
     "EML": "Download eml file",
+    "PACKET_CAPTURE": "Packet Capture",
     "NETWORK_PACKET_CAPTURE_STARTED": "Network packet capture started",
     "NETWORK_PACKET_CAPTURE_STOPPED": "Network packet capture stopped",
     "NETWORK_PACKET_CAPTURE_COMPLETED": "Network packet capture completed",
     "NETWORK_PACKET_CAPTURE_STARTED_DETAILS": "Capture loop has been started in a new thread!",
     "NETWORK_PACKET_CAPTURE_COMPLETED_DETAILS": "Loop has been stopped and .pcap file has been saved in the case folder",
-    "PACKET_CAPTURE_ERROR": "An error occurred during network packets acquisition! \\nSee bellow for more detail."
+    "PACKET_CAPTURE_ERROR": "An error occurred during network packets acquisition! \\nSee bellow for more detail.",
+    "SCREEN_RECORDER": "Screen recorder",
+    "SCREEN_RECORDER_STARTED": "Screen recorder capture started",
+    "SCREEN_RECORDER_STOPPED": "Screen recorder capture stopped",
+    "SCREEN_RECORDER_COMPLETED": "Screen recorder capture completed",
+    "SCREEN_RECORDER_STARTED_DETAILS": "recorder loop has been started in a new thread!",
+    "SCREEN_RECORDER_COMPLETED_DETAILS": "Loop has been stopped and .avi file has been saved in the case folder",
+    "SCREEN_RECORDER_ERROR_TITLE": "Screen recorder error.",
+    "SCREEN_RECORDER_ERROR_MSG": "An error occurred during screen recorder acquisition! \nSee bellow for more detail.",
+    "HEADERS": "Html Headers",
+    "HEADERS_STARTED": "HEADERS started",
+    "HEADERS_COMPLETED": "HEADERS completed",
+    "HEADERS_GET_INFO_URL": "Get HEADERS info for URL: {}",
+    "HEADERS_ERROR_TITLE": "Headers error.",
+    "HEADERS_CONNECTION_ERROR": "Error during the HTTP request! \nSee bellow for more detail.",
+    "HEADERS_MALFORMED_URL_ERROR": "Malformed URL: missing Network Location part."
 }
