--- a/fit_acquisition/lang/it.json
+++ b/fit_acquisition/lang/it.json
@@ -3,11 +3,8 @@
     "ACQUISITION_STOPPED": "Acquisizione interrotta",
     "ACQUISITION_FINISHED": "Acquisizione completata",
     "NTP_ACQUISITION_TIME": "Ora di acquisizione NTP {}: {}",
-    "PACKET_CAPTURE": "Cattura pacchetti",
-    "SCREEN_RECORDER": "Registratore schermo",
     "NSLOOKUP": "Nslookup",
     "WHOIS": "Whois",
-    "HEADERS": "Intestazioni HTML",
     "TRACEROUTE": "Traceroute",
     "SSLKEYLOG": "Log delle chiavi SSL",
     "SSLCERTIFICATE": "Certificato SSL",
@@ -19,10 +16,26 @@
     "PEC_AND_DOWNLOAD_EML": "PEC e file EML",
     "PEC": "Invia il report PDF via PEC",
     "EML": "Scarica file eml",
+    "PACKET_CAPTURE": "Cattura pacchetti",
     "NETWORK_PACKET_CAPTURE_STARTED": "Acquisizione pacchetti di rete avviata",
     "NETWORK_PACKET_CAPTURE_STOPPED": "Acquisizione pacchetti di rete interrotta",
     "NETWORK_PACKET_CAPTURE_COMPLETED": "Acquisizione pacchetti di rete completata",
     "NETWORK_PACKET_CAPTURE_STARTED_DETAILS": "Il ciclo di acquisizione è stato avviato in un nuovo thread!",
     "NETWORK_PACKET_CAPTURE_COMPLETED_DETAILS": "Il ciclo è stato interrotto e il file .pcap è stato salvato nella cartella del caso",
-    "PACKET_CAPTURE_ERROR": "Si è verificato un errore durante l'acquisizione dei pacchetti di rete!\\nVedi sotto per maggiori dettagli."
+    "PACKET_CAPTURE_ERROR": "Si è verificato un errore durante l'acquisizione dei pacchetti di rete!\\nVedi sotto per maggiori dettagli.",
+    "SCREEN_RECORDER": "Registratore schermo",
+    "SCREEN_RECORDER_STARTED": "Cattura dello schermo avviata",
+    "SCREEN_RECORDER_STOPPED": "Cattura dello schermo interrotta",
+    "SCREEN_RECORDER_COMPLETED": "Cattura dello schermo completata",
+    "SCREEN_RECORDER_STARTED_DETAILS": "Il ciclo di registrazione è stato avviato in un nuovo thread!",
+    "SCREEN_RECORDER_COMPLETED_DETAILS": "Il ciclo è stato interrotto e il file .avi è stato salvato nella cartella del caso",
+    "SCREEN_RECORDER_ERROR_TITLE": "Errore nella registrazione dello schermo.",
+    "SCREEN_RECORDER_ERROR_MSG": "Si è verificato un errore durante l'acquisizione dello schermo!\\nVedi sotto per maggiori dettagli.",
+    "HEADERS": "Intestazioni HTML",
+    "HEADERS_STARTED": "Inizio acquisizione HEADERS",
+    "HEADERS_COMPLETED": "Acquisizione HEADERS completata",
+    "HEADERS_GET_INFO_URL": "Recupero informazioni HEADERS per l'URL: {}",
+    "HEADERS_ERROR_TITLE": "Errore HEADERS",
+    "HEADERS_CONNECTION_ERROR": "Errore durante la richiesta HTTP! \nVedi sotto per maggiori dettagli.",
+    "HEADERS_MALFORMED_URL_ERROR": "URL malformato: manca la parte di localizzazione della rete (netloc)."
 }
