--- a/fit_acquisition/lang/en.json
+++ b/fit_acquisition/lang/en.json
@@ -6,7 +6,6 @@
     "WHOIS": "Whois",
     "TRACEROUTE": "Traceroute",
     "SSLKEYLOG": "SSL Keylog",
-    "SSLCERTIFICATE": "SSL Certificate",
     "SAVE_CASE_INFO": "Save Case Information",
     "HASHFILE": "Calculate Hash File",
     "REPORTFILE": "Generate PDF Report",
@@ -21,7 +20,7 @@
     "NETWORK_PACKET_CAPTURE_COMPLETED": "Network packet capture completed",
     "NETWORK_PACKET_CAPTURE_STARTED_DETAILS": "Capture loop has been started in a new thread!",
     "NETWORK_PACKET_CAPTURE_COMPLETED_DETAILS": "Loop has been stopped and .pcap file has been saved in the case folder",
-    "PACKET_CAPTURE_ERROR": "An error occurred during network packets acquisition! \\nSee bellow for more detail.",
+    "PACKET_CAPTURE_ERROR": "An error occurred during network packets acquisition!\nSee bellow for more detail.",
     "SCREEN_RECORDER": "Screen recorder",
     "SCREEN_RECORDER_STARTED": "Screen recorder capture started",
     "SCREEN_RECORDER_STOPPED": "Screen recorder capture stopped",
@@ -29,19 +28,28 @@
     "SCREEN_RECORDER_STARTED_DETAILS": "recorder loop has been started in a new thread!",
     "SCREEN_RECORDER_COMPLETED_DETAILS": "Loop has been stopped and .avi file has been saved in the case folder",
     "SCREEN_RECORDER_ERROR_TITLE": "Screen recorder error.",
-    "SCREEN_RECORDER_ERROR_MSG": "An error occurred during screen recorder acquisition! \nSee bellow for more detail.",
+    "SCREEN_RECORDER_ERROR_MSG": "An error occurred during screen recorder acquisition!\nSee bellow for more detail.",
     "MALFORMED_URL_ERROR": "Malformed URL: missing Network Location part.",
     "NO_DNS_RESPONSE": "No DNS response for {}",
+    "HTTP_CONNECTION_ERROR": "Error during the HTTP request!\nSee bellow for more detail.",
     "HEADERS": "Html Headers",
     "HEADERS_STARTED": "HEADERS started",
     "HEADERS_COMPLETED": "HEADERS completed",
     "HEADERS_GET_INFO_URL": "Get HEADERS info for URL: {}",
     "HEADERS_ERROR_TITLE": "HEADERS error",
-    "HEADERS_CONNECTION_ERROR": "Error during the HTTP request! \nSee bellow for more detail.",
     "NSLOOKUP": "Nslookup",
     "NSLOOKUP_GET_INFO_URL": "Get NSLOOKUP info for URL: {}",
     "NSLOOKUP_STARTED": "NSLOOKUP started",
     "NSLOOKUP_COMPLETED": "NSLOOKUP completed",
     "NSLOOKUP_ERROR_TITLE": "NSLOOKUP error",
-    "NSLOOKUP_EXECUTION_ERROR": "Error during NSLOOKUP execution! \nSee bellow for more detail."
+    "NSLOOKUP_EXECUTION_ERROR": "Error during NSLOOKUP execution!\nSee bellow for more detail.",
+    "SSLCERTIFICATE": "SSL CERTIFICATE",
+    "SSLCERTIFICATE_STARTED": "SSL CERTIFICATE started",
+    "SSLCERTIFICATE_COMPLETED": "SSL CERTIFICATE completed",
+    "SSLCERTIFICATE_GET_FROM_URL": "Get SSL CERTIFICATE from URL: {}",
+    "SSLCERTIFICATE_NOT_EXIST" : "CERTIFICATE SSL don't exist on URL: {}",
+    "SSLCERTIFICATE_ERROR_TITLE": "SSL CERTIFICATE error",
+    "SSLCERTIFICATE_ERROR_CHECK": "Error during SSL CERTIFICATE verification.",
+    "SSLCERTIFICATE_CONNECTION_ERROR": "Error during SSL connection or while retrieving the SSL CERTIFICATE.",
+    "SSLCERTIFICATE_SAVING_CERTIFICATE_ERROR": "Exception while saving SSL CERTIFICATE!\nSee bellow for more detail."
 }
