--- a/fit_acquisition/lang/it.json
+++ b/fit_acquisition/lang/it.json
@@ -6,7 +6,6 @@
     "WHOIS": "Whois",
     "TRACEROUTE": "Traceroute",
     "SSLKEYLOG": "Log delle chiavi SSL",
-    "SSLCERTIFICATE": "Certificato SSL",
     "SAVE_CASE_INFO": "Salva informazioni del caso",
     "HASHFILE": "Calcola hash del file",
     "REPORTFILE": "Genera report PDF",
@@ -15,33 +14,42 @@
     "PEC_AND_DOWNLOAD_EML": "PEC e file EML",
     "PEC": "Invia il report PDF via PEC",
     "EML": "Scarica file eml",
-    "PACKET_CAPTURE": "Cattura pacchetti",
+    "PACKET_CAPTURE": "CATTURA PACCHETTI",
     "NETWORK_PACKET_CAPTURE_STARTED": "Acquisizione pacchetti di rete avviata",
     "NETWORK_PACKET_CAPTURE_STOPPED": "Acquisizione pacchetti di rete interrotta",
     "NETWORK_PACKET_CAPTURE_COMPLETED": "Acquisizione pacchetti di rete completata",
     "NETWORK_PACKET_CAPTURE_STARTED_DETAILS": "Il ciclo di acquisizione è stato avviato in un nuovo thread!",
     "NETWORK_PACKET_CAPTURE_COMPLETED_DETAILS": "Il ciclo è stato interrotto e il file .pcap è stato salvato nella cartella del caso",
-    "PACKET_CAPTURE_ERROR": "Si è verificato un errore durante l'acquisizione dei pacchetti di rete!\\nVedi sotto per maggiori dettagli.",
-    "SCREEN_RECORDER": "Registratore schermo",
+    "PACKET_CAPTURE_ERROR": "Si è verificato un errore durante l'acquisizione dei pacchetti di rete!\nVedi sotto per maggiori dettagli.",
+    "SCREEN_RECORDER": "REGISTRAZIONE SCHERMO",
     "SCREEN_RECORDER_STARTED": "Cattura dello schermo avviata",
     "SCREEN_RECORDER_STOPPED": "Cattura dello schermo interrotta",
     "SCREEN_RECORDER_COMPLETED": "Cattura dello schermo completata",
     "SCREEN_RECORDER_STARTED_DETAILS": "Il ciclo di registrazione è stato avviato in un nuovo thread!",
     "SCREEN_RECORDER_COMPLETED_DETAILS": "Il ciclo è stato interrotto e il file .avi è stato salvato nella cartella del caso",
     "SCREEN_RECORDER_ERROR_TITLE": "Errore nella registrazione dello schermo.",
-    "SCREEN_RECORDER_ERROR_MSG": "Si è verificato un errore durante l'acquisizione dello schermo!\\nVedi sotto per maggiori dettagli.",
+    "SCREEN_RECORDER_ERROR_MSG": "Si è verificato un errore durante l'acquisizione dello schermo!\nVedi sotto per maggiori dettagli.",
     "MALFORMED_URL_ERROR": "URL malformato: manca la parte di localizzazione della rete (netloc).",
     "NO_DNS_RESPONSE": "Nessuna risposta DNS per {}",
-    "HEADERS": "Intestazioni HTML",
+    "HTTP_CONNECTION_ERROR": "Errore durante la richiesta HTTP!\nVedi sotto per maggiori dettagli.",
+    "HEADERS": "HEADERS",
     "HEADERS_STARTED": "Inizio acquisizione HEADERS",
     "HEADERS_COMPLETED": "Acquisizione HEADERS completata",
     "HEADERS_GET_INFO_URL": "Recupero informazioni HEADERS per l'URL: {}",
     "HEADERS_ERROR_TITLE": "Errore HEADERS",
-    "HEADERS_CONNECTION_ERROR": "Errore durante la richiesta HTTP!\\nVedi sotto per maggiori dettagli.",
-    "NSLOOKUP": "Nslookup",
+    "NSLOOKUP": "NSLOOKUP",
     "NSLOOKUP_GET_INFO_URL": "Recupero informazioni NSLOOKUP per l'URL: {}",
     "NSLOOKUP_STARTED": "Inizio acquisizione NSLOOKUP",
     "NSLOOKUP_COMPLETED": "Acquisizione NSLOOKUP completata",
     "NSLOOKUP_ERROR_TITLE": "Errore NSLOOKUP",
-    "NSLOOKUP_EXECUTION_ERROR": "Errore durante l'esecuzione di NSLOOKUP!\\nVedi sotto per maggiori dettagli."
+    "NSLOOKUP_EXECUTION_ERROR": "Errore durante l'esecuzione di NSLOOKUP!\nVedi sotto per maggiori dettagli.",
+    "SSLCERTIFICATE": "CERTIFICATO SSL",
+    "SSLCERTIFICATE_STARTED": "Inizio acquisizione del CERTIFICATO SSL",
+    "SSLCERTIFICATE_COMPLETED": " Acquisizione CERTIFICATO SSL completata",
+    "SSLCERTIFICATE_GET_FROM_URL": "Recupero CERTIFICATO SSL dall'URL: {}",
+    "SSLCERTIFICATE_NOT_EXIST": "Il CERTIFICATO SSL non esiste sull'URL: {}",
+    "SSLCERTIFICATE_ERROR_TITLE": "Errore CERTIFICATO SSL",
+    "SSLCERTIFICATE_ERROR_CHECK": "Errore durante il controllo del CERTIFICATO SSL.",
+    "SSL_CERTIFICATE_CONNECTION_ERROR": "Errore nella connessione SSL o nella ricezione del certificato.",
+    "SSLCERTIFICATE_SAVING_CERTIFICATE_ERROR": "Eccezione durante il salvataggio del certificato SSL!\nVedi sotto per maggiori dettagli."
 }
