--- a/fit_acquisition/lang/it.json
+++ b/fit_acquisition/lang/it.json
@@ -5,7 +5,6 @@
     "NTP_ACQUISITION_TIME": "Ora di acquisizione NTP {}: {}",
     "WHOIS": "Whois",
     "TRACEROUTE": "Traceroute",
-    "SSLKEYLOG": "Log delle chiavi SSL",
     "SAVE_CASE_INFO": "Salva informazioni del caso",
     "HASHFILE": "Calcola hash del file",
     "REPORTFILE": "Genera report PDF",
@@ -51,5 +50,10 @@
     "SSLCERTIFICATE_ERROR_TITLE": "Errore CERTIFICATO SSL",
     "SSLCERTIFICATE_ERROR_CHECK": "Errore durante il controllo del CERTIFICATO SSL.",
     "SSL_CERTIFICATE_CONNECTION_ERROR": "Errore nella connessione SSL o nella ricezione del certificato.",
-    "SSLCERTIFICATE_SAVING_CERTIFICATE_ERROR": "Eccezione durante il salvataggio del certificato SSL!\nVedi sotto per maggiori dettagli."
+    "SSLCERTIFICATE_SAVING_CERTIFICATE_ERROR": "Eccezione durante il salvataggio del certificato SSL!\nVedi sotto per maggiori dettagli.",
+    "SSLKEYLOG": "Log delle chiavi SSL",
+    "SSLKEYLOG_STARTED": "Inizio acquisizione SSLKEYLOG",
+    "SSLKEYLOG_COMPLETED": "Acquisizione SSLKEYLOG completata",
+    "SSLKEYLOG_GET": "Recupero del log delle chiavi SSL (sslkeylog)"
+
 }
