--- a/fit_acquisition/lang/it.json
+++ b/fit_acquisition/lang/it.json
@@ -3,9 +3,7 @@
     "ACQUISITION_STOPPED": "Acquisizione interrotta",
     "ACQUISITION_FINISHED": "Acquisizione completata",
     "NTP_ACQUISITION_TIME": "Ora di acquisizione NTP {}: {}",
-    "WHOIS": "Whois",
     "SAVE_CASE_INFO": "Salva informazioni del caso",
-    "HASHFILE": "Calcola hash del file",
     "REPORTFILE": "Genera report PDF",
     "TIMESTAMP": "Genera TIMESTAMP per il report",
     "ZIP_AND_REMOVE_FOLDER": "Comprimi e rimuovi cartella",
@@ -18,7 +16,7 @@
     "NETWORK_PACKET_CAPTURE_COMPLETED": "Acquisizione pacchetti di rete completata",
     "NETWORK_PACKET_CAPTURE_STARTED_DETAILS": "Il ciclo di acquisizione è stato avviato in un nuovo thread!",
     "NETWORK_PACKET_CAPTURE_COMPLETED_DETAILS": "Il ciclo è stato interrotto e il file .pcap è stato salvato nella cartella del caso",
-    "PACKET_CAPTURE_ERROR": "Si è verificato un errore durante l'acquisizione dei pacchetti di rete!\nVedi sotto per maggiori dettagli.",
+    "PACKET_CAPTURE_ERROR": "Si è verificato un errore durante l'acquisizione dei pacchetti di rete!\nDi seguito maggiori dettagli.",
     "SCREEN_RECORDER": "REGISTRAZIONE SCHERMO",
     "SCREEN_RECORDER_STARTED": "Cattura dello schermo avviata",
     "SCREEN_RECORDER_STOPPED": "Cattura dello schermo interrotta",
@@ -26,10 +24,10 @@
     "SCREEN_RECORDER_STARTED_DETAILS": "Il ciclo di registrazione è stato avviato in un nuovo thread!",
     "SCREEN_RECORDER_COMPLETED_DETAILS": "Il ciclo è stato interrotto e il file .avi è stato salvato nella cartella del caso",
     "SCREEN_RECORDER_ERROR_TITLE": "Errore nella registrazione dello schermo.",
-    "SCREEN_RECORDER_ERROR_MSG": "Si è verificato un errore durante l'acquisizione dello schermo!\nVedi sotto per maggiori dettagli.",
+    "SCREEN_RECORDER_ERROR_MSG": "Si è verificato un errore durante l'acquisizione dello schermo!\nDi seguito maggiori dettagli.",
     "MALFORMED_URL_ERROR": "URL malformato: manca la parte di localizzazione della rete (netloc).",
     "NO_DNS_RESPONSE": "Nessuna risposta DNS per {}",
-    "HTTP_CONNECTION_ERROR": "Errore durante la richiesta HTTP!\nVedi sotto per maggiori dettagli.",
+    "HTTP_CONNECTION_ERROR": "Errore durante la richiesta HTTP!\nDi seguito maggiori dettagli.",
     "HEADERS": "HEADERS",
     "HEADERS_STARTED": "Inizio acquisizione HEADERS",
     "HEADERS_COMPLETED": "Acquisizione HEADERS completata",
@@ -40,7 +38,7 @@
     "NSLOOKUP_STARTED": "Inizio acquisizione NSLOOKUP",
     "NSLOOKUP_COMPLETED": "Acquisizione NSLOOKUP completata",
     "NSLOOKUP_ERROR_TITLE": "Errore NSLOOKUP",
-    "NSLOOKUP_EXECUTION_ERROR": "Errore durante l'esecuzione di NSLOOKUP!\nVedi sotto per maggiori dettagli.",
+    "NSLOOKUP_EXECUTION_ERROR": "Errore durante l'esecuzione di NSLOOKUP!\nDi seguito maggiori dettagli.",
     "SSLCERTIFICATE": "CERTIFICATO SSL",
     "SSLCERTIFICATE_STARTED": "Inizio acquisizione del CERTIFICATO SSL",
     "SSLCERTIFICATE_COMPLETED": "Acquisizione CERTIFICATO SSL completata",
@@ -49,7 +47,7 @@
     "SSLCERTIFICATE_ERROR_TITLE": "Errore CERTIFICATO SSL",
     "SSLCERTIFICATE_ERROR_CHECK": "Errore durante il controllo del CERTIFICATO SSL.",
     "SSL_CERTIFICATE_CONNECTION_ERROR": "Errore nella connessione SSL o nella ricezione del certificato.",
-    "SSLCERTIFICATE_SAVING_CERTIFICATE_ERROR": "Eccezione durante il salvataggio del certificato SSL!\nVedi sotto per maggiori dettagli.",
+    "SSLCERTIFICATE_SAVING_CERTIFICATE_ERROR": "Eccezione durante il salvataggio del certificato SSL!\nDi seguito maggiori dettagli.",
     "SSLKEYLOG": "Log delle chiavi SSL",
     "SSLKEYLOG_STARTED": "Inizio acquisizione SSLKEYLOG",
     "SSLKEYLOG_COMPLETED": "Acquisizione SSLKEYLOG completata",
@@ -59,5 +57,18 @@
     "TRACEROUTE_COMPLETED": "Acquisizione TRACEROUTE completata",
     "TRACEROUTE_GET_INFO_URL": "TRACEROUTE per l'URL: {}",
     "TRACEROUTE_ERROR_TITLE": "Errore TRACEROUTE",
-    "TRACEROUTE_EXECUTION_ERROR": "Errore durante l'esecuzione del TRACEROUTE!\nVedi sotto per maggiori dettagli."
+    "TRACEROUTE_EXECUTION_ERROR": "Errore durante l'esecuzione del TRACEROUTE!\nDi seguito maggiori dettagli.",
+    "WHOIS": "Whois",
+    "WHOIS_STARTED": "Inizio acquisizione WHOIS",
+    "WHOIS_COMPLETED": "Acquisizione WHOIS completata",
+    "WHOIS_GET_INFO_URL": "Recupero informazioni WHOIS per l'URL: {}",
+    "WHOIS_ERROR_TITLE": "Errore WHOIS",
+    "WHOIS_DNS_RESOLUTON_ERROR": "Errore di risoluzione DNS\nDi seguito maggiori dettagli.",
+    "WHOIS_INVALID_DOMAIN_ERROR": "Dominio non valido o non estratto correttamente.",
+    "WHOIS_EXECUTION_ERROR": "Errore durante l'esecuzione del WHOIS!\nDi seguito maggiori dettagli.",
+    "HASHFILE": "Calcolo HASH dei file acquisiti",
+    "CALCULATE_HASHFILE_STARTED": "Inizio calcolo HASH dei file acquisiti",
+    "CALCULATE_HASHFILE_COMPLETED": "Calcolo HASH dei file acquisiti completato",
+    "CALCULATE_HASHFILE": "Calcolo HASH dei file acquisiti"
+
 }
