--- a/fit_acquisition/lang/it.json
+++ b/fit_acquisition/lang/it.json
@@ -4,7 +4,6 @@
     "ACQUISITION_FINISHED": "Acquisizione completata",
     "NTP_ACQUISITION_TIME": "Ora di acquisizione NTP {}: {}",
     "SAVE_CASE_INFO": "Salva informazioni del caso",
-    "REPORTFILE": "Genera report PDF",
     "TIMESTAMP": "Genera TIMESTAMP per il report",
     "ZIP_AND_REMOVE_FOLDER": "Comprimi e rimuovi cartella",
     "PEC_AND_DOWNLOAD_EML": "PEC e file EML",
@@ -69,6 +68,63 @@
     "HASHFILE": "Calcolo HASH dei file acquisiti",
     "CALCULATE_HASHFILE_STARTED": "Inizio calcolo HASH dei file acquisiti",
     "CALCULATE_HASHFILE_COMPLETED": "Calcolo HASH dei file acquisiti completato",
-    "CALCULATE_HASHFILE": "Calcolo HASH dei file acquisiti"
+    "CALCULATE_HASHFILE": "Calcolo HASH dei file acquisiti",
+    "REPORTFILE": "Report PDF",
+    "GENERATE_PDF_REPORT": "Creazione Report PDF",
+    "GENERATE_PDF_REPORT_STARTED": "Inizio Creazione Report PDF Report",
+    "GENERATE_PDF_REPORT_COMPLETED": "Creazione Report PDF completata",
+    "ACQUISITION_DATE": "Data acquisizione",
+    "ACQUISITION_TYPE": "Tipo di acquisizione",
+    "AVID": "Acquisizione video",
+    "CASE": "Cliente / Caso",
+    "CASEDATA": "Dati sul caso",
+    "CASEINFO": "Informazioni sul caso",
+    "CCDESCR": "La catena di custodia è un concetto importante in ambito forense che descrive il \" \"controllo e la documentazione degli spostamenti e delle manipolazioni di una prova \" \"durante un'indagine o un processo legale. La catena di custodia garantisce che la prova sia autentica, \" \"non alterata e non contaminata, e che la sua integrità sia mantenuta dal momento della raccolta fino \" \"all'utilizzo in tribunale. Mantenere una catena di custodia affidabile è fondamentale per garantire \" \"che la prova sia valida e adatta a supportare le conclusioni nell'ambito giudiziario.",
+    "CERD": "Certificato del server",
+    "COMPLETE_SCREENSHOT": "Screenshot dell'intera pagina",
+    "COURT": "Tribunale",
+    "DESCR": "Descrizione",
+    "DESCRIPTION": "FIT - Freezing Internet Tool è un’applicazione per l'acquisizione forense di contenuti \" \"come pagine web, e-mail e social media direttamente da internet. FIT è uno strumento FLOSS: acronimo di\" \" 'Free/Libre and Open Source Software', è un tipo di software il cui codice sorgente è reso disponibile\" \" al pubblico e può essere utilizzato, modificato e distribuito da chiunque, secondo i termini di una \" \"specifica licenza di software libero e open source. Ciò significa che, rispetto al software proprietario, \" \"il software FLOSS offre maggiori libertà e flessibilità agli utenti, che possono personalizzarlo in base \" \"alle proprie esigenze, migliorandolo e distribuendolo senza restrizioni. \" \"Inoltre, essendo aperto alla revisione da parte di altri sviluppatori, il software FLOSS spesso \" \"beneficia di un processo di sviluppo collaborativo più trasparente e inclusivo. \" \"FIT è stato realizzato in linguaggio di programmazione Python, \" \"implementando un’architettura modulare. FIT può essere scaricato al seguente link: {}.<br><br>\" \"Un browser forense è un software utilizzato per analizzare e recuperare dati da dispositivi elettronici, \" \"come computer, smartphone o tablet, durante indagini forensi. Questo software consente di accedere a \" \"informazioni sull'utilizzo del dispositivo, come cronologia delle attività, file e documenti, \" \"messaggi di testo, immagini e molto altro, in modo da fornire prove che possono essere utilizzate \" \"in una causa legale.",
+    "HASHD": "File contenente gli hash dei file",
+    "HDESCR": "L'hash delle prove digitali è un valore univoco che rappresenta i dati \" \"digitali e che viene utilizzato per verificare l'integrità e l'autenticità \" \"delle prove. Un hash viene calcolato utilizzando un algoritmo di crittografia a \" \"sensi unici che trasforma i dati in una stringa di caratteri a lunghezza fissa. Se i dati \" \"originali vengono modificati, anche l'hash cambia, rendendo facile rilevare eventuali alterazioni. \" \"In un contesto legale, l'hash delle prove digitali viene spesso utilizzato per verificare che i dati \" \"originali non siano stati alterati durante il processo di raccolta, conservazione e presentazione delle \" \"prove. Mantenere un record dell'hash delle prove digitali contribuisce a garantire la loro integrità \" \"e ad assicurare che siano adatti a supportare le conclusioni in una causa legale.",
+    "HEADERSD": "Headers della richiesta",
+    "INDEX": "Indice",
+    "LAWYER": "Avvocato",
+    "LOGD": "Informazioni generate dai vari componenti del sistema",
+    "NAME": "Nome del file",
+    "NOTES": "Note",
+    "NOT_PRODUCED": "File non prodotto.",
+    "NSLOOKUPD": "Record DNS",
+    "NUMBER": "Numero di procedimento",
+    "OF": "di ",
+    "OPERATOR": "Operatore",
+    "PAGE": "Pagina ",
+    "PCAPD": "Registrazione del traffico di rete",
+    "PROCEEDING": "Tipo di procedimento",
+    "RELEASES_LINK": "<a href='https://github.com/fit-project/fit/releases'>Freezing Internet Tool - Releases</a>",
+    "REPORT": "Report Freezing Internet Tool",
+    "SIZE": "Dimensione: ",
+    "SSLKEYD": "Chiavi SSL",
+    "T1": "Freezing Internet Tool",
+    "T2": "Informazioni generali",
+    "T3": "Verifica titolarità dei dati",
+    "T3DESCR": "Nel corso dell'acquisizione, l'utente navigava alcuni siti web. FIT  procedeva alla verifica di ciascuna connessione mediante routine appositamente implementate.  In particolare, ai fini di stabilire la titolarità dei domini coinvolti, venivano indicate le  seguenti informazioni:",
+    "T4": "Digital Forensics",
+    "T4DESCR": "La digital forensics è l'applicazione scientifica e tecnologica dei principi  forensi alla raccolta, conservazione, analisi e presentazione dei dati digitali  in un contesto legale. Questa disciplina è utilizzata per investigare crimini informatici,  come la frode, il furto di dati o la diffusione di malware, e per recuperare e analizzare informazioni  da dispositivi elettronici come computer, smartphone e tablet. La digital forensics comprende  l'utilizzo di strumenti specializzati per analizzare i dati digitali e garantire la validità delle  prove in un contesto legale. Il lavoro dei professionisti della digital forensics è cruciale per  aiutare le agenzie investigative e i tribunali a identificare e punire i responsabili di crimini  informatici e garantire la giustizia.",
+    "T5": "File prodotti dal sistema",
+    "T5DESCR": "Durante l'acquisizione, il sistema ha prodotto una serie di file  come screenshot, video dell'intera navigazione, log del traffico di rete, ecc., identificati  nella seguente tabella.",
+    "T7": "File prodotti dall'utente",
+    "T7DESCR": "Tutti i file prodotti dall'utente durante l'acquisizione sono raccolti all'interno  della cartella compressa avente estensione .zip. Per ognuno di questi file viene riportata  la dimensione espressa in bytes.",
+    "T8": "Screenshot della pagina",
+    "T8DESCR": "Vengono di seguito riportati gli screenshot della pagina navigata durante l'acquisizione.",
+    "T9": "Acquisizione video",
+    "T9DESCR": "Viene di seguito riportato l'hyperlink alla registrazione video.",
+    "TITLE": "FIT",
+    "TITLECC": "La Catena di Custodia",
+    "TITLEH": "Hash",
+    "TRACEROUTED": "Traceroute dei pacchetti",
+    "VIDEO_LINK": "Link al video",
+    "WHOISD": "File whois",
+    "ZIPD": "Archivio contenente l'acquisizione"
 
 }
