--- a/fit_acquisition/lang/it.json
+++ b/fit_acquisition/lang/it.json
@@ -3,7 +3,6 @@
     "ACQUISITION_STOPPED": "Acquisizione interrotta",
     "ACQUISITION_FINISHED": "Acquisizione completata",
     "NTP_ACQUISITION_TIME": "Ora di acquisizione NTP {}: {}",
-    "TIMESTAMP": "Genera TIMESTAMP per il report",
     "ZIP_AND_REMOVE_FOLDER": "Comprimi e rimuovi cartella",
     "PEC_AND_DOWNLOAD_EML": "PEC e file EML",
     "PEC": "Invia il report PDF via PEC",
@@ -70,7 +69,7 @@
     "CALCULATE_HASHFILE": "Calcolo HASH dei file acquisiti",
     "REPORTFILE": "Report PDF",
     "GENERATE_PDF_REPORT": "Creazione Report PDF",
-    "GENERATE_PDF_REPORT_STARTED": "Inizio Creazione Report PDF Report",
+    "GENERATE_PDF_REPORT_STARTED": "Inizio Creazione Report PDF",
     "GENERATE_PDF_REPORT_COMPLETED": "Creazione Report PDF completata",
     "ACQUISITION_DATE": "Data acquisizione",
     "ACQUISITION_TYPE": "Tipo di acquisizione",
@@ -130,5 +129,9 @@
     "ZIPD": "Archivio contenente l'acquisizione",
     "SAVE_CASE_INFO": "Salva informazioni del caso su file json",
     "SAVE_CASE_INFO_STARTED": "Salvataggio informazioni del caso su file json iniziata",
-    "SAVE_CASE_INFO_COMPLETED": "Salvataggio informazioni del caso su file json completata"
+    "SAVE_CASE_INFO_COMPLETED": "Salvataggio informazioni del caso su file json completata",
+    "TIMESTAMP": "Genera TIMESTAMP per il report",
+    "TIMESTAMP_STARTED": "Inizio calcolo Timestamp",
+    "TIMESTAMP_COMPLETED": "Calcolo Timestamp completato",
+    "TIMESTAMP_APPLY": "Applica timestamp a {} dal server {}"
 }
