--- a/fit_acquisition/lang/it.json
+++ b/fit_acquisition/lang/it.json
@@ -130,8 +130,8 @@
     "SAVE_CASE_INFO": "Salva informazioni del caso su file json",
     "SAVE_CASE_INFO_STARTED": "Salvataggio informazioni del caso su file json iniziata",
     "SAVE_CASE_INFO_COMPLETED": "Salvataggio informazioni del caso su file json completata",
-    "TIMESTAMP": "Genera TIMESTAMP per il report",
-    "TIMESTAMP_STARTED": "Inizio calcolo Timestamp",
-    "TIMESTAMP_COMPLETED": "Calcolo Timestamp completato",
-    "TIMESTAMP_APPLY": "Applica timestamp a {} dal server {}"
+    "TIMESTAMP": "Genera MARCA TEMPORALE per il report",
+    "TIMESTAMP_STARTED": "Inizio calcolo marca temporale",
+    "TIMESTAMP_COMPLETED": "Calcolo marca temporale  completato",
+    "TIMESTAMP_APPLY": "Applicata marca temporale al file {} dal server {}"
 }
