--- a/fit_acquisition/lang/en.json
+++ b/fit_acquisition/lang/en.json
@@ -4,9 +4,6 @@
     "ACQUISITION_FINISHED" : "Acquisition finished",
     "NTP_ACQUISITION_TIME" : "NTP {} acquisition time: {}",
     "ZIP_AND_REMOVE_FOLDER": "Zip and remove folder",
-    "PEC_AND_DOWNLOAD_EML": "PEC and EML file",
-    "PEC": "Send the PDF Report by PEC",
-    "EML": "Download eml file",
     "PACKET_CAPTURE": "Packet Capture",
     "NETWORK_PACKET_CAPTURE_STARTED": "Network packet capture started",
     "NETWORK_PACKET_CAPTURE_STOPPED": "Network packet capture stopped",
@@ -133,5 +130,19 @@
     "TIMESTAMP": "Generate TIMESTAMP for the report",
     "TIMESTAMP_STARTED": "TIMESTAMP started",
     "TIMESTAMP_COMPLETED": "TIMESTAMP completed",
-    "TIMESTAMP_APPLY": "Apply timestamp to {} from server {}"
+    "TIMESTAMP_APPLY": "Apply timestamp to {} from server {}",
+    "PEC_AND_DOWNLOAD_EML": "PEC and EML file",
+    "PEC": "Send the PDF Report by PEC",
+    "EML": "Download eml file",
+    "PEC_AND_DOWNLOAD_EML_STARTED": "Send report by PEC and Download EML started",
+    "PEC_AND_DOWNLOAD_EML_COMPLETED": "Send report by PEC and Download EML completed",  
+    "PEC_SENT": "Sent report by PEC to {} status {}",
+    "PEC_HAS_NOT_BEEN_SENT_CANNOT_DOWNLOAD_EML": "PEC has not been sent cannot download the EML",
+    "EML_DOWNLOAD": "EML downloaded with status {}",
+    "SEND_MESSAGE": "Send PEC...",
+    "LOGIN_FAILED": "Login failed",
+    "SMTP_FAILED_MGS": "Wrong SMTP or PEC parameters or credentials",
+    "IMAP_FAILED_MGS": "Wrong IMAP or PEC parameters or credentials",
+    "SUBJECT": "Acquisition Report {} case: {} ID: {}",
+    "BODY": "Attached is the report and related timestamp for acquisition {} for case: {}"
 }
