--- a/fit_acquisition/lang/it.json
+++ b/fit_acquisition/lang/it.json
@@ -4,9 +4,6 @@
     "ACQUISITION_FINISHED": "Acquisizione completata",
     "NTP_ACQUISITION_TIME": "Ora di acquisizione NTP {}: {}",
     "ZIP_AND_REMOVE_FOLDER": "Comprimi e rimuovi cartella",
-    "PEC_AND_DOWNLOAD_EML": "PEC e file EML",
-    "PEC": "Invia il report PDF via PEC",
-    "EML": "Scarica file eml",
     "PACKET_CAPTURE": "CATTURA PACCHETTI",
     "NETWORK_PACKET_CAPTURE_STARTED": "Acquisizione pacchetti di rete avviata",
     "NETWORK_PACKET_CAPTURE_STOPPED": "Acquisizione pacchetti di rete interrotta",
@@ -133,5 +130,19 @@
     "TIMESTAMP": "Genera MARCA TEMPORALE per il report",
     "TIMESTAMP_STARTED": "Inizio calcolo marca temporale",
     "TIMESTAMP_COMPLETED": "Calcolo marca temporale  completato",
-    "TIMESTAMP_APPLY": "Applicata marca temporale al file {} dal server {}"
+    "TIMESTAMP_APPLY": "Applicata marca temporale al file {} dal server {}",
+    "PEC_AND_DOWNLOAD_EML": "PEC e file EML",
+    "PEC": "Invia il report PDF via PEC",
+    "EML": "Scarica file eml",
+    "PEC_AND_DOWNLOAD_EML_STARTED": "Invio del report tramite PEC e download EML avviato",
+    "PEC_AND_DOWNLOAD_EML_COMPLETED": "Invio del report tramite PEC e download EML completato",
+    "PEC_SENT": "Report inviato tramite PEC a {} con stato {}",
+    "PEC_HAS_NOT_BEEN_SENT_CANNOT_DOWNLOAD_EML": "PEC non inviata, impossibile scaricare l'EML",
+    "EML_DOWNLOAD": "EML scaricato con stato {}",
+    "SEND_MESSAGE": "Invio PEC...",
+    "LOGIN_FAILED": "Autenticazione fallita",
+    "SMTP_FAILED_MGS": "Parametri o credenziali SMTP o PEC errati",
+    "IMAP_FAILED_MGS": "Parametri o credenziali IMAP o PEC errati",
+    "SUBJECT": "Rapporto di acquisizione {} caso: {} ID: {}",
+    "BODY": "In allegato il rapporto e il relativo timestamp per l'acquisizione {} per il caso: {}"
 }
