--- a/fit_acquisition/lang/en.json
+++ b/fit_acquisition/lang/en.json
@@ -24,10 +24,10 @@
     "HEADERS": "Html Headers",
     "HEADERS_STARTED": "HEADERS started",
     "HEADERS_COMPLETED": "HEADERS completed",
-    "HEADERS_GET_INFO_URL": "Get HEADERS info for URL: {}",
+    "HEADERS_GET_INFO_URL": "{}: Get HEADERS info for URL: {}",
     "HEADERS_ERROR_TITLE": "HEADERS error",
     "NSLOOKUP": "Nslookup",
-    "NSLOOKUP_GET_INFO_URL": "Get NSLOOKUP info for URL: {}",
+    "NSLOOKUP_GET_INFO_URL": "{}: Get NSLOOKUP info for URL: {}",
     "NSLOOKUP_STARTED": "NSLOOKUP started",
     "NSLOOKUP_COMPLETED": "NSLOOKUP completed",
     "NSLOOKUP_ERROR_TITLE": "NSLOOKUP error",
@@ -35,7 +35,7 @@
     "SSLCERTIFICATE": "SSL CERTIFICATE",
     "SSLCERTIFICATE_STARTED": "SSL CERTIFICATE started",
     "SSLCERTIFICATE_COMPLETED": "SSL CERTIFICATE completed",
-    "SSLCERTIFICATE_GET_FROM_URL": "Get SSL CERTIFICATE from URL: {}",
+    "SSLCERTIFICATE_GET_FROM_URL": "{}: Get SSL CERTIFICATE from URL: {}",
     "SSLCERTIFICATE_NOT_EXIST" : "CERTIFICATE SSL don't exist on URL: {}",
     "SSLCERTIFICATE_ERROR_TITLE": "SSL CERTIFICATE error",
     "SSLCERTIFICATE_ERROR_CHECK": "Error during SSL CERTIFICATE verification.",
@@ -48,13 +48,13 @@
     "TRACEROUTE": "Traceroute",
     "TRACEROUTE_STARTED": "TRACEROUTE started",
     "TRACEROUTE_COMPLETED": "TRACEROUTE completed",
-    "TRACEROUTE_GET_INFO_URL": "Get TRACEROUTE info for URL: {}",
+    "TRACEROUTE_GET_INFO_URL": "{}: Get TRACEROUTE info for URL: {}",
     "TRACEROUTE_ERROR_TITLE": "TRACEROUTE error",
     "TRACEROUTE_EXECUTION_ERROR": "Error during TRACEROUTE execution!\nSee bellow for more detail.",
     "WHOIS": "Whois",
     "WHOIS_STARTED": "WHOIS started",
     "WHOIS_COMPLETED": "WHOIS completed",
-    "WHOIS_GET_INFO_URL": "Get WHOIS info for URL: {}",
+    "WHOIS_GET_INFO_URL": "{}: Get WHOIS info for URL: {}",
     "WHOIS_ERROR_TITLE": "WHOIS error",
     "WHOIS_DNS_RESOLUTION_ERROR": "DNS resolution error\nSee below for more details.",
     "WHOIS_INVALID_DOMAIN_ERROR": "Invalid domain or domain extraction failed.",
