--- a/fit_acquisition/lang/it.json
+++ b/fit_acquisition/lang/it.json
@@ -24,10 +24,10 @@
     "HEADERS": "HEADERS",
     "HEADERS_STARTED": "Inizio acquisizione HEADERS",
     "HEADERS_COMPLETED": "Acquisizione HEADERS completata",
-    "HEADERS_GET_INFO_URL": "Recupero informazioni HEADERS per l'URL: {}",
+    "HEADERS_GET_INFO_URL": "{}: Recupero informazioni HEADERS per l'URL: {}",
     "HEADERS_ERROR_TITLE": "Errore HEADERS",
     "NSLOOKUP": "NSLOOKUP",
-    "NSLOOKUP_GET_INFO_URL": "Recupero informazioni NSLOOKUP per l'URL: {}",
+    "NSLOOKUP_GET_INFO_URL": "{}: Recupero informazioni NSLOOKUP per l'URL: {}",
     "NSLOOKUP_STARTED": "Inizio acquisizione NSLOOKUP",
     "NSLOOKUP_COMPLETED": "Acquisizione NSLOOKUP completata",
     "NSLOOKUP_ERROR_TITLE": "Errore NSLOOKUP",
@@ -35,7 +35,7 @@
     "SSLCERTIFICATE": "CERTIFICATO SSL",
     "SSLCERTIFICATE_STARTED": "Inizio acquisizione del CERTIFICATO SSL",
     "SSLCERTIFICATE_COMPLETED": "Acquisizione CERTIFICATO SSL completata",
-    "SSLCERTIFICATE_GET_FROM_URL": "Recupero CERTIFICATO SSL dall'URL: {}",
+    "SSLCERTIFICATE_GET_FROM_URL": "{}: Recupero CERTIFICATO SSL dall'URL: {}",
     "SSLCERTIFICATE_NOT_EXIST": "Il CERTIFICATO SSL non esiste sull'URL: {}",
     "SSLCERTIFICATE_ERROR_TITLE": "Errore CERTIFICATO SSL",
     "SSLCERTIFICATE_ERROR_CHECK": "Errore durante il controllo del CERTIFICATO SSL.",
@@ -48,13 +48,13 @@
     "TRACEROUTE": "Traceroute",
     "TRACEROUTE_STARTED": "Inizio acquisizione TRACEROUTE",
     "TRACEROUTE_COMPLETED": "Acquisizione TRACEROUTE completata",
-    "TRACEROUTE_GET_INFO_URL": "TRACEROUTE per l'URL: {}",
+    "TRACEROUTE_GET_INFO_URL": "{}: TRACEROUTE per l'URL: {}",
     "TRACEROUTE_ERROR_TITLE": "Errore TRACEROUTE",
     "TRACEROUTE_EXECUTION_ERROR": "Errore durante l'esecuzione del TRACEROUTE!\nDi seguito maggiori dettagli.",
     "WHOIS": "Whois",
     "WHOIS_STARTED": "Inizio acquisizione WHOIS",
     "WHOIS_COMPLETED": "Acquisizione WHOIS completata",
-    "WHOIS_GET_INFO_URL": "Recupero informazioni WHOIS per l'URL: {}",
+    "WHOIS_GET_INFO_URL": "{}: Recupero informazioni WHOIS per l'URL: {}",
     "WHOIS_ERROR_TITLE": "Errore WHOIS",
     "WHOIS_DNS_RESOLUTON_ERROR": "Errore di risoluzione DNS\nDi seguito maggiori dettagli.",
     "WHOIS_INVALID_DOMAIN_ERROR": "Dominio non valido o non estratto correttamente.",
