--- a/fit_acquisition/lang/it.json
+++ b/fit_acquisition/lang/it.json
@@ -6,14 +6,14 @@
     "PACKET_CAPTURE": "CATTURA PACCHETTI",
     "NETWORK_PACKET_CAPTURE_STARTED": "Acquisizione pacchetti di rete avviata",
     "NETWORK_PACKET_CAPTURE_STOPPED": "Acquisizione pacchetti di rete interrotta",
-    "NETWORK_PACKET_CAPTURE_COMPLETED": "Acquisizione pacchetti di rete completata",
+    "NETWORK_PACKET_CAPTURE_COMPLETED": "{}: Acquisizione pacchetti di rete completata",
     "NETWORK_PACKET_CAPTURE_STARTED_DETAILS": "Il ciclo di acquisizione è stato avviato in un nuovo thread!",
     "NETWORK_PACKET_CAPTURE_COMPLETED_DETAILS": "Il ciclo è stato interrotto e il file .pcap è stato salvato nella cartella del caso",
     "PACKET_CAPTURE_ERROR": "Si è verificato un errore durante l'acquisizione dei pacchetti di rete!\nDi seguito maggiori dettagli.",
     "SCREEN_RECORDER": "REGISTRAZIONE SCHERMO",
     "SCREEN_RECORDER_STARTED": "Cattura dello schermo avviata",
     "SCREEN_RECORDER_STOPPED": "Cattura dello schermo interrotta",
-    "SCREEN_RECORDER_COMPLETED": "Cattura dello schermo completata",
+    "SCREEN_RECORDER_COMPLETED": "{}: Cattura dello schermo completata",
     "SCREEN_RECORDER_STARTED_DETAILS": "Il ciclo di registrazione è stato avviato in un nuovo thread!",
     "SCREEN_RECORDER_COMPLETED_DETAILS": "Il ciclo è stato interrotto e il file .avi è stato salvato nella cartella del caso",
     "SCREEN_RECORDER_ERROR_TITLE": "Errore nella registrazione dello schermo.",
@@ -61,13 +61,13 @@
     "WHOIS_EXECUTION_ERROR": "Errore durante l'esecuzione del WHOIS!\nDi seguito maggiori dettagli.",
     "HASHFILE": "Calcolo HASH dei file acquisiti",
     "CALCULATE_HASHFILE_STARTED": "Inizio calcolo HASH dei file acquisiti",
-    "CALCULATE_HASHFILE_COMPLETED": "Calcolo HASH dei file acquisiti completato",
+    "CALCULATE_HASHFILE_COMPLETED": "{}: Calcolo HASH dei file acquisiti completato",
     "CALCULATE_HASHFILE": "Calcolo HASH dei file acquisiti",
     "REPORTFILE": "Report PDF",
     "GENERATE_PDF_REPORT_FAILED_MGS": "Errore nella generazione del file PDF",
     "GENERATE_PDF_REPORT": "Creazione Report PDF",
     "GENERATE_PDF_REPORT_STARTED": "Inizio Creazione Report PDF",
-    "GENERATE_PDF_REPORT_COMPLETED": "Creazione Report PDF completata",
+    "GENERATE_PDF_REPORT_COMPLETED": "{}: Creazione Report PDF completata",
     "ACQUISITION_DATE": "Data acquisizione",
     "ACQUISITION_TYPE": "Tipo di acquisizione",
     "AVID": "Acquisizione video",
@@ -126,16 +126,16 @@
     "ZIPD": "Archivio contenente l'acquisizione",
     "SAVE_CASE_INFO": "Salva informazioni del caso su file json",
     "SAVE_CASE_INFO_STARTED": "Salvataggio informazioni del caso su file json iniziata",
-    "SAVE_CASE_INFO_COMPLETED": "Salvataggio informazioni del caso su file json completata",
+    "SAVE_CASE_INFO_COMPLETED": "{}: Salvataggio informazioni del caso su file json completata",
     "TIMESTAMP": "Genera MARCA TEMPORALE per il report",
     "TIMESTAMP_STARTED": "Inizio calcolo marca temporale",
     "TIMESTAMP_COMPLETED": "Calcolo marca temporale  completato",
-    "TIMESTAMP_APPLY": "Applicata marca temporale al file {} dal server {}",
+    "TIMESTAMP_APPLY": "{}: Applicata marca temporale al file {} dal server {}",
     "PEC_AND_DOWNLOAD_EML": "PEC e file EML",
     "PEC": "Invia il report PDF via PEC",
     "EML": "Scarica file eml",
     "PEC_AND_DOWNLOAD_EML_STARTED": "Invio del report tramite PEC e download EML avviato",
-    "PEC_AND_DOWNLOAD_EML_COMPLETED": "Invio del report tramite PEC e download EML completato",
+    "PEC_AND_DOWNLOAD_EML_COMPLETED": "{}: Invio del report tramite PEC e download EML completato",
     "PEC_SENT": "Report inviato tramite PEC a {} con stato {}",
     "PEC_HAS_NOT_BEEN_SENT_CANNOT_DOWNLOAD_EML": "PEC non inviata, impossibile scaricare l'EML",
     "EML_DOWNLOAD": "EML scaricato con stato {}",
@@ -146,7 +146,7 @@
     "SUBJECT": "Rapporto di acquisizione {} caso: {} ID: {}",
     "BODY": "In allegato il rapporto e il relativo timestamp per l'acquisizione {} per il caso: {}",
     "ZIP_AND_REMOVE_FOLDER": "Comprimi e rimuovi cartella",
-    "ZIP_AND_REMOVE_FOLDER_STARTED": "Inzio compressione e rimozione della cartella {}",
-    "ZIP_AND_REMOVE_FOLDER_COMPLETED": "Compressione e rimozione della cartella {} completata",
+    "ZIP_AND_REMOVE_FOLDER_STARTED": "Inzio compressione e rimozione della cartella",
+    "ZIP_AND_REMOVE_FOLDER_COMPLETED": "{}: Compressione e rimozione della cartella completata",
     "DELETE_FOLDER_ERROR": "Si è verificato un errore durante la cancellazione"
 }
