--- a/fit_acquisition/lang/en.json
+++ b/fit_acquisition/lang/en.json
@@ -6,14 +6,14 @@
     "PACKET_CAPTURE": "Packet Capture",
     "NETWORK_PACKET_CAPTURE_STARTED": "Network packet capture started",
     "NETWORK_PACKET_CAPTURE_STOPPED": "Network packet capture stopped",
-    "NETWORK_PACKET_CAPTURE_COMPLETED": "Network packet capture completed",
+    "NETWORK_PACKET_CAPTURE_COMPLETED": "{}: Network packet capture completed",
     "NETWORK_PACKET_CAPTURE_STARTED_DETAILS": "Capture loop has been started in a new thread!",
     "NETWORK_PACKET_CAPTURE_COMPLETED_DETAILS": "Loop has been stopped and .pcap file has been saved in the case folder",
     "PACKET_CAPTURE_ERROR": "An error occurred during network packets acquisition!\nSee bellow for more detail.",
     "SCREEN_RECORDER": "Screen recorder",
     "SCREEN_RECORDER_STARTED": "Screen recorder capture started",
     "SCREEN_RECORDER_STOPPED": "Screen recorder capture stopped",
-    "SCREEN_RECORDER_COMPLETED": "Screen recorder capture completed",
+    "SCREEN_RECORDER_COMPLETED": "{}: Screen recorder capture completed",
     "SCREEN_RECORDER_STARTED_DETAILS": "recorder loop has been started in a new thread!",
     "SCREEN_RECORDER_COMPLETED_DETAILS": "Loop has been stopped and .avi file has been saved in the case folder",
     "SCREEN_RECORDER_ERROR_TITLE": "Screen recorder error.",
@@ -61,13 +61,13 @@
     "WHOIS_EXECUTION_ERROR": "Error during WHOIS execution!\nSee bellow for more detail.",
     "HASHFILE": "Calculate HASH of the acquired files",
     "CALCULATE_HASHFILE_STARTED": "Calculate HASH of the acquired files started",
-    "CALCULATE_HASHFILE_COMPLETED": "Calculate HASH of the acquired files completed",
+    "CALCULATE_HASHFILE_COMPLETED": "{}: Calculate HASH of the acquired files completed",
     "CALCULATE_HASHFILE": "Calculation of the HASH of the acquired files",
     "REPORTFILE": "Generate PDF Report",
     "GENERATE_PDF_REPORT_FAILED_MGS": "An error occurred while generating the PDF report",
     "GENERATE_PDF_REPORT": "Generate PDF Report",
     "GENERATE_PDF_REPORT_STARTED": "Generate PDF Report started",
-    "GENERATE_PDF_REPORT_COMPLETED": "Generate PDF Report completed",
+    "GENERATE_PDF_REPORT_COMPLETED": "{}: Generate PDF Report completed",
     "ACQUISITION_DATE": "Acquisition Date",
     "ACQUISITION_TYPE": "Acquisition Type",
     "AVID": "Video Acquisition",
@@ -126,16 +126,16 @@
     "ZIPD": "Archive Containing the Acquisition",
     "SAVE_CASE_INFO": "Save case information on json file",
     "SAVE_CASE_INFO_STARTED": "Save case information started",
-    "SAVE_CASE_INFO_COMPLETED":"Save case information completed",
+    "SAVE_CASE_INFO_COMPLETED":"{}: Save case information completed",
     "TIMESTAMP": "Generate TIMESTAMP for the report",
     "TIMESTAMP_STARTED": "TIMESTAMP started",
     "TIMESTAMP_COMPLETED": "TIMESTAMP completed",
-    "TIMESTAMP_APPLY": "Apply timestamp to {} from server {}",
+    "TIMESTAMP_APPLY": "{}: Apply timestamp to {} from server {}",
     "PEC_AND_DOWNLOAD_EML": "PEC and EML file",
     "PEC": "Send the PDF Report by PEC",
     "EML": "Download eml file",
     "PEC_AND_DOWNLOAD_EML_STARTED": "Send report by PEC and Download EML started",
-    "PEC_AND_DOWNLOAD_EML_COMPLETED": "Send report by PEC and Download EML completed",  
+    "PEC_AND_DOWNLOAD_EML_COMPLETED": "{}: Send report by PEC and Download EML completed",  
     "PEC_SENT": "Sent report by PEC to {} status {}",
     "PEC_HAS_NOT_BEEN_SENT_CANNOT_DOWNLOAD_EML": "PEC has not been sent cannot download the EML",
     "EML_DOWNLOAD": "EML downloaded with status {}",
@@ -147,6 +147,6 @@
     "BODY": "Attached is the report and related timestamp for acquisition {} for case: {}",
     "ZIP_AND_REMOVE_FOLDER": "Zip and remove folder",
     "ZIP_AND_REMOVE_FOLDER_STARTED": "Zip and remove folder started",
-    "ZIP_AND_REMOVE_FOLDER_COMPLETED": "Zip and remove folder completed",
+    "ZIP_AND_REMOVE_FOLDER_COMPLETED": "{}: Zip and remove folder completed",
     "DELETE_FOLDER_ERROR": "An error occurred during deletion"
 }
